src/tests/testfiles/function-declarations/10.txt
testfiles/function-declarations/10.c:1:1: error: Identifier sum already taken by function
int sum(int a, int b);
^
